炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;


/*
 * name    xcgui界面库模块
 * Made    dasemimi
 * time    2018.5.22
 * ver     2.2.3
*/
namespace XCGUI
{
    using System.Text;

    public struct LOGFONTW
    {
        public int lfHeight;
        public int lfWidth;
        public int lfEscapement;
        public int lfOrientation;
        public int lfWeight;
        public byte lfItalic;
        public byte lfUnderline;
        public byte lfStrikeOut;
        public byte lfCharSet;
        public byte lfOutPrecision;
        public byte lfClipPrecision;
        public byte lfQuality;
        public byte lfPitchAndFamily;
        unsafe public fixed ushort lfFaceName[32];
    }
    public struct LOGFONT
    {
        public int lfHeight;
        public int lfWidth;
        public int lfEscapement;
        public int lfOrientation;
        public int lfWeight;
        public byte lfItalic;
        public byte lfUnderline;
        public byte lfStrikeOut;
        public byte lfCharSet;
        public byte lfOutPrecision;
        public byte lfClipPrecision;
        public byte lfQuality;
        public byte lfPitchAndFamily;
        unsafe public fixed ushort lfFaceName[32];
    }
    public struct RECT
    {
        public int x;
        public int y;
        public int cx;
        public int cy;
    }
    public struct POINT
    {
        public int x;
        public int y;
    }
    public struct SIZE
    {
        public int cx;
        public int cy;
    }
    public struct PaddingSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct SpaceSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct MarginSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }

    public struct RECTF
    {
        public float left;
        public float top;
        public float right;
        public float bottom;
    }
    public struct BorderSize_i
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
 
public struct Position_i
{
	public int iRow;
	public int iColumn;
}
public struct listBox_item_i
{
	public int index;
	public int nUserData;
	public int nHeight;
	public int nSelHeight;
	public int nState;
	public RECT rcItem;
	public int hLayout;
	public int hTemp;
}
public struct listBox_item_info_i
{
	public int nUserData;
	public int nHeight;
	public int nSelHeight;
}
public struct listView_item_id_i
{
	public int iGroup;
	public int iItem;
}
public struct list_item_i
{
	public int index;
	public int iSubItem;
	public int nUserData;
	public int nState;
	public RECT rcItem;
	public int hLayout;
	public int hTemp;
}
public struct list_header_item_i
{
	public int index;
	public int nUserData;
	public bool bSort;
	public int nSortType;
	public int iColumnAdapter;
	public int nState;
	public RECT rcItem;
	public int hLayout;
	public int hTemp;
}
public struct tree_item_i
{
	public int nID;
	public int nDepth;
	public int nHeight;
	public int nSelHeight;
	public int nUserData;
	public bool bExpand;
	public int nState;
	public RECT rcItem;
	public int hLayout;
	public int hTemp;
}
public struct listView_item_i
{
	public int iGroup;
	public int iItem;
	public int nUserData;
	public int nState;
	public RECT rcItem;
	public int hLayout;
	public int hTemp;
}
public struct layout_info_i
{
	public int widthType;
	public int heightType;
	public short width;
	public short height;
}
public struct menu_popupWnd_i
{
	public int hWindow;
	public int nParentID;
}
public struct menu_drawBackground_i
{
	public int hMenu;
	public int hWindow;
	public int nParentID;
}
public struct menu_drawItem_i
{
	public int hMenu;
	public int hWindow;
	public int nID;
	public int nState;
	public RECT rcItem;
	public int hIcon;
	public string Text;
}
public struct tree_drag_item_i
{
	public int nDragItem;
	public int nDestItem;
	public int nType;
}
public struct xc_font_info_i
{
	public int nSize;
	public int nStyle;
	unsafe public  fixed short name[32];
}
public struct propertyGrid_item_i
{
	public int nType;
	public int nID;
	public int nDepth;
	public int nUserData;
	public int nNameColWidth;
	public RECT rcItem;
	public RECT rcExpand;
	public bool bExpand;
	public bool bShow;
}
public struct POINTF
{
	public float x;
	public float y;
}
public struct monthCal_item_i
{
	public int nDay;
	public int nType;
	public int nState;
	public RECT rcItem;
}


     
    unsafe public delegate int WM_LBUTTONDOWN_CPP(UInt32 nFlags,IntPtr pPt,bool *pbHandled);

    unsafe public delegate int XE_BNCLICK_CPP(bool* pbHandled);
    unsafe public delegate int XE_BNCLICK_CPP1(int hEventEle, bool* pbHandled);
    unsafe public delegate int XE_BNCLICK_CPP2(int hEle, int hEventEle, bool* pbHandled);


    unsafe public delegate int XE_LISTBOX_TEMP_CREATE_END_CPP(ref listBox_item_i listBox_item_i, bool* pbHandled);

    unsafe public delegate int XE_MENU_SELECT_CPP(int nID, bool* pbHandled);

    partial class xc
    {
        unsafe public static void XWnd_RegEventCPP(int hEle, int wmEvent, Delegate pFuc)
        {
            IntPtr pOnBtnClick = Marshal.GetFunctionPointerForDelegate(pFuc);
            XWnd_RegEventC(hEle, wmEvent, (int)pOnBtnClick);
        }
        unsafe public static void XWnd_RegEventCPP1(int hEle, int wmEvent, Delegate pFuc)
        {
            IntPtr pOnBtnClick = Marshal.GetFunctionPointerForDelegate(pFuc);
            XWnd_RegEventC(hEle, wmEvent, (int)pOnBtnClick);
        }
        [DllImport("user32.dll")]
        public static extern int MessageBoxA(int hWnd, string pText, string pTitle, int nType);

        unsafe public static void XEle_RegEventCPP(int hEle, int xeEvent, Delegate pFuc)
        {
            IntPtr pOnBtnClick = Marshal.GetFunctionPointerForDelegate(pFuc);
            XEle_RegEventC(hEle, xeEvent, (int)pOnBtnClick);
        }
        unsafe public static void XEle_RegEventCPP1(int hEle, int xeEvent, Delegate pFuc)
        {
            IntPtr pOnBtnClick = Marshal.GetFunctionPointerForDelegate(pFuc);
            XEle_RegEventC1(hEle, xeEvent, (int)pOnBtnClick);
        }
        unsafe public static void XEle_RegEventCPP2(int hEle, int xeEvent, Delegate pFuc)
        {
            IntPtr pOnBtnClick = Marshal.GetFunctionPointerForDelegate(pFuc);
            XEle_RegEventC2(hEle, xeEvent, (int)pOnBtnClick);
        }



		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_Init", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern bool XCloudUI_Init ();

		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_OpenApp", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern bool XCloudUI_OpenApp (string pLocalDir,string pUrl);

		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_OpenAppCmd", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern bool XCloudUI_OpenAppCmd (string pCmdLine);

		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_Exit", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern void XCloudUI_Exit ();

		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_EnableDependBrowser", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern void XCloudUI_EnableDependBrowser (bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_OpenUrl", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern bool XCloudUI_OpenUrl (string pUrl);

		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_SetEventCallback", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern void XCloudUI_SetEventCallback (int pFun);

		[DllImport("xcgui.dll", EntryPoint = "XCloudUI_GetAppDir", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern int XCloudUI_GetAppDir (string pOut,int nOutlen);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern int XDateTime_Create (int x,int y,int cx,int cy,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern void XDateTime_SetStyle (int hEle,int nStyle);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern int XDateTime_GetStyle (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_EnableSplitSlash", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		public static extern void XDateTime_EnableSplitSlash (int hEle,bool bSlash);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_GetTime", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDateTime_GetTime (int hEle,int pnHour,int pnMinute,int pnSecond);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_SetTime", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDateTime_SetTime (int hEle,int nHour,int nMinute,int nSecond);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_GetDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDateTime_GetDate (int hEle,int pnYear,int pnMonth,int pnDay);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_SetDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDateTime_SetDate (int hEle,int nYear,int nMonth,int nDay);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_GetSelBkColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDateTime_GetSelBkColor (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_SetSelBkColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDateTime_SetSelBkColor (int hEle,int crSelectBk,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XDateTime_GetButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDateTime_GetButton (int hEle,int nType);

		[DllImport("xcgui.dll", EntryPoint = "XMonthCal_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XMonthCal_Create (int x,int y,int cx,int cy,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "XMonthCal_SetToday", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XMonthCal_SetToday (int hEle,int nYear,int nMonth,int nDay);

		[DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetToday", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XMonthCal_GetToday (int hEle,int pnYear,int pnMonth,int pnDay);

		[DllImport("xcgui.dll", EntryPoint = "XMonthCal_SeSelDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XMonthCal_SeSelDate (int hEle,int nYear,int nMonth,int nDay);
